# rusty-algorithms

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/data/: huffman.rs  mod.rs
src/graph/: mod.rs
src/numbers/: basic.rs  mod.rs  prime_sieve.rs  primes.rs
src/sorting/: dumbsorts.rs  heapsort.rs  mergesort.rs  mod.rs  quicksort.rs  simplesorts.rs  utils.rs
