[package]
name = "rusty-algorithms"
description = ""
version = "0.1.0"
authors = ["Ryan Damerell"]
edition = "2018"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.10"
rand_pcg = "0.3"

[dev-dependencies]
rayon = "1.5"